--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "iglesiareact",
+  "name": "bingo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "antd": "^5.18.3",
+    "aos": "^2.3.4",
+    "axios": "^1.7.8",
+    "firebase": "^10.12.2",
+    "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.5",
+    "use-sound": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
