--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "antd": "^5.18.3",
     "aos": "^2.3.4",
     "axios": "^1.7.8",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "lucide-react": "^0.484.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
